# noirlab_project

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/crud/: celestial_crud.py
app/models/: celestial_model.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/site/: 404.html  index.html
docs/site/assets/stylesheets/: main.d7758b05.min.css  main.d7758b05.min.css.map
docs/site/search/: search_index.json
migrations/: env.py
migrations/versions/: 0bcd0acb60a3_init_migrations.py  d0a72a467cfa_initial_migration.py
search/: search_index.json
src/app/: database.py
src/app/api/: celestial_routes.py  run_app.py
src/app/crud/: celestial_crud.py
src/app/models/: celestial_model.py
src/app/schemas/: celestial_schema.py
tests/: test_celestial_routes.py
