[project]
name = "noirlab_project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SeamusGoldman", email = "seamusgoldman@gmail.com"},
]
dependencies = ["fastapi>=0.115.8", "uvicorn>=0.34.0", "sqlmodel>=0.0.22", "pydantic>=2.10.6", "requests>=2.32.3", "sqlalchemy>=2.0.37", "alembic>=1.14.1", "psycopg2-binary>=2.9.10"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "pylance>=0.22.0",
    "pylint>=3.3.4",
    "flake8>=7.1.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
